body overlap with footer - issue resovled

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -4,91 +4,190 @@ footer {
 	width: 100%;
 }
 
-.bg-black {
-	background-color: #000 !important;
+.footerSocialMediaLogos, .footerOtherLogos {
+  height: 35px !important;
+  width: 35px !important;
 }
 
-.footer-bs {
-  background-color: #3c3d41;
-  padding: 60px 40px;
-  color: white;
+.footerLogoBackground {
+  height: 35px !important;
+  background-color: #ffffff !important;
+  padding: 0;
+  margin: 10px;
+  border: none;
 }
-.footer-bs .footer-brand h2 {
-  margin: 0px 0px 25px;
-  color: black;
+
+.footerOtherLogos {
+  background-color: white !important;
+  border-radius: 50%;
+  margin: 10px;
 }
-.footer-bs .footer-brand p {
-  font-size: 12px;
-  color: rgba(255, 255, 255, 0.7);
+
+.footer-distributed{
+  background-color: #292c2f;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: bold 16px sans-serif;
+
+  padding: 55px 50px;
+  margin-top: 80px;
 }
-.footer-bs .footer-social ul {
-  list-style: none;
-  padding: 0px;
-}
-.footer-bs .footer-social ul li {
-  padding: 5px 4px;
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
   display: inline-block;
-}
-.footer-bs .footer-social ul li a {
-  color: white;
-  font-size: 2.5em;
-  margin-right: .5em;
-  transition: all .3s;
-}
-.footer-bs h4 {
-  font-size: 16px !important;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  margin-bottom: 30px !important;
-}
-.footer-bs .footer-ns h4 {
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  margin-bottom: 10px;
-}
-.footer-bs .footer-ns p {
-  font-size: 12px;
-  color: rgba(255, 255, 255, 0.7);
-}
-.footer-bs .right_reserved {
-  font-size: 12px;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
-  margin-top: 35px;
-  padding-top: 60px;
-  word-spacing: 2px;
+  vertical-align: top;
 }
 
-.footer-bs .footer-brand, .footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns {
-  padding: 10px 25px;
+/* Footer left */
+
+.footer-distributed .footer-left{
+  width: 40%;
 }
 
-.footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns {
-  border-color: transparent;
+/* The company logo */
+
+.footer-distributed h3{
+  color:  #ffffff;
+  font: normal 36px 'Cookie';
+  margin: 0;
 }
 
-.footer-bs .footer-social a:hover {
-  color: black;
-  font-size: 3em;
+.footer-distributed h3 span{
+  color:  #5383d3;
+}
+
+/* Footer links */
+
+.footer-distributed .footer-links{
+  color:  #ffffff;
+  margin: 20px 0 12px;
+  padding: 0;
+}
+
+.footer-distributed .footer-links a{
+  display:inline-block;
+  line-height: 1.8;
   text-decoration: none;
-  transition: all .3s;
+  color:  inherit;
 }
 
-.newsletter button {
-  background: black;
-  border: 1px solid black;
-  transition: all .3s;
+.footer-distributed .footer-company-name{
+  color:  #8f9296;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
 }
 
-.newsletter button:hover {
-  color: black;
-  background: #333;
-  border: 1px solid #333;
-  transition: all .3s;
+/* Footer Center */
+
+.footer-distributed .footer-center{
+  width: 35%;
 }
 
-@media (min-width: 768px) {
-  .footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns {
-    border-left: solid 1px rgba(255, 255, 255, 0.1);
+.footer-distributed .footer-center i{
+  background-color:  #33383b;
+  color: #ffffff;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+  vertical-align: middle;
+}
+
+.footer-distributed .footer-center i.fa-envelope{
+  font-size: 17px;
+  line-height: 38px;
+}
+
+.footer-distributed .footer-center p{
+  display: inline-block;
+  color: #ffffff;
+  vertical-align: middle;
+  margin:0;
+}
+
+.footer-distributed .footer-center p span{
+  display:block;
+  font-weight: normal;
+  font-size:14px;
+  line-height:2;
+}
+
+.footer-distributed .footer-center p a{
+  color:  #5383d3;
+  text-decoration: none;;
+}
+
+
+/* Footer Right */
+
+.footer-distributed .footer-right{
+  width: 20%;
+}
+
+.footer-distributed .footer-company-about{
+  line-height: 20px;
+  color:  #92999f;
+  font-size: 13px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.footer-distributed .footer-company-about span{
+  display: block;
+  color:  #ffffff;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.footer-distributed .footer-icons{
+  margin-top: 25px;
+}
+
+.footer-distributed .footer-icons a{
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  border-radius: 2px;
+
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+
+  margin-right: 3px;
+  margin-bottom: 5px;
+}
+
+/* If you don't want the footer to be responsive, remove these media queries */
+
+@media (max-width: 880px) {
+
+  .footer-distributed{
+    font: bold 14px sans-serif;
   }
+
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-center,
+  .footer-distributed .footer-right{
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+
+  .footer-distributed .footer-center i{
+    margin-left: 0;
+  }
+
 }
+
