--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -32,3 +32,9 @@ html, body {
     padding-top: 0vh
   }
 }
+
+@media (max-width: 890px) {
+  #loginContainer {
+    padding-bottom: 650px !important;
+  }
+}
